--- a/list.html
+++ b/list.html
@@ -41,7 +41,7 @@
                         <img src="materials/map/Clock.svg" alt="">
                         <p>10:00 - 23:00</p>
                     </div>
-                    <a href="main page.html" class="but-list">Каталог</a>
+                    <a href="main page.html#target-div-main" class="but-list">Каталог</a>
                 </div>
                 <div class="list-l">
                     <p>Улица Михайлова, 30Ак4</p>
@@ -49,7 +49,7 @@
                         <img src="materials/map/Clock.svg" alt="">
                         <p>10:00 - 23:00</p>
                     </div>
-                    <a href="main page.html" class="but-list">Каталог</a>
+                    <a href="main page.html#target-div-main" class="but-list">Каталог</a>
                 </div>
                 <div class="list-l">
                     <p>Люблинская улица, 80к4</p>
@@ -57,7 +57,7 @@
                         <img src="materials/map/Clock.svg" alt="">
                         <p>10:00 - 23:00</p>
                     </div>
-                    <a href="main page.html" class="but-list">Каталог</a>
+                    <a href="main page.html#target-div-main" class="but-list">Каталог</a>
                 </div>
                 <div class="list-l">
                     <p>2-й Нагатинский проезд, 2/2к1</p>
@@ -65,7 +65,7 @@
                         <img src="materials/map/Clock.svg" alt="">
                         <p>10:00 - 23:00</p>
                     </div>
-                    <a href="main page.html" class="but-list">Каталог</a>
+                    <a href="main page.html#target-div-main" class="but-list">Каталог</a>
                 </div>
                 <div class="list-l">
                     <p>улица Свободы, 3</p>
@@ -73,7 +73,7 @@
                         <img src="materials/map/Clock.svg" alt="">
                         <p>10:00 - 23:00</p>
                     </div>
-                    <a href="main page.html" class="but-list">Каталог</a>
+                    <a href="main page.html#target-div-main" class="but-list">Каталог</a>
                 </div>
             </div>
         </div>
