--- a/main page.html
+++ b/main page.html
@@ -57,42 +57,99 @@
     
 
 
+    <div class="container-xxl font" id="target-div-main">
+        <div class="catalog-text">
+            <h3>Новинки</h3>
+        </div>
+        <div class="catalog-cards scrolling-wrapper-flexbox">
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <div class="product-info">
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    </h5></p>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                </div>
+            </div>
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <div class="product-info">
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    </h5></p>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                </div>
+            </div>
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <div class="product-info">
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    </h5></p>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                </div>
+            </div>
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <div class="product-info">
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    </h5></p>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <img src="materials/ad/Component 2.svg" alt="" class="ad">
+
     <div class="container-xxl font">
         <div class="catalog-text">
-            <h3>Каталог</h3>
+            <h3>Бестселлеры</h3>
         </div>
-        <div class="catalog-cards">
+        <div class="catalog-cards scrolling-wrapper-flexbox">
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovar.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
-                </div>
-                <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
-                    </h5></p>
-                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
-                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
-                </div>
-            </div>
-            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
-                <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
-                </div>
-                <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
-                    </h5></p>
-                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
-                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
-                </div>
-            </div>
-            <div class="card" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
-                <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
                 </div>
                 <div class="additional-info">
                     <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
@@ -106,6 +163,10 @@
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
                 </div>
                 <div class="additional-info">
                     <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
@@ -119,6 +180,10 @@
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
                 </div>
                 <div class="additional-info">
                     <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
@@ -127,11 +192,15 @@
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
                 </div>
             </div>
-            <div class="card" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovar.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
                 </div>
                 <div class="additional-info">
                     <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
@@ -140,6 +209,86 @@
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
                 </div>
             </div>
+
+        </div>
+    </div>
+
+    <img src="materials/ad/Component 3.svg" alt="" class="ad">
+
+    <div class="container-xxl font">
+        <div class="catalog-text">
+            <h3>Специально для вас</h3>
+        </div>
+        <div class="catalog-cards scrolling-wrapper-flexbox">
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <div class="product-info">
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    </h5></p>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                </div>
+            </div>
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <div class="product-info">
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    </h5></p>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                </div>
+            </div>
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <div class="product-info">
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    </h5></p>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                </div>
+            </div>
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <div class="product-info">
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
+                </div>
+                <div class="additional-info">
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    </h5></p>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
+                </div>
+            </div>
+
         </div>
         <div class="end">
             <h4>© 2024 VORONIN</h4>
