--- a/account.html
+++ b/account.html
@@ -64,7 +64,7 @@
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
                 </div>
             </div>
-            <div class="card" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
+            <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovar.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
