--- a/main page.html
+++ b/main page.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 19.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 20.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 21.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -142,7 +142,7 @@
         </div>
         <div class="catalog-cards scrolling-wrapper-flexbox">
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 22.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 23.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 24.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 25.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -221,7 +221,7 @@
         </div>
         <div class="catalog-cards scrolling-wrapper-flexbox">
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 26.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -238,7 +238,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 27.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 28.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
@@ -272,7 +272,7 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 29.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
