--- a/main page.html
+++ b/main page.html
@@ -82,15 +82,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 19.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Кольцо из белого золота с бриллиантами и танзанитом </h4>
+                    <p class="product-price"><h4>76 990 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>18 шт, 0.067 карат
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -99,15 +99,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 20.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Кольцо из комбинированного золота с бриллиантами</h4>
+                    <p class="product-price"><h4>34 990 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Бриллиант (природный)<br>134 шт, 0.081 карат
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -116,15 +116,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 21.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Цепь из золота, плетение Бисмарк, 585 проба </h4>
+                    <p class="product-price"><h4>82 990 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Красное золото 585 пробы<br>9.71 г<br>Без вставок
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -144,15 +144,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 22.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Серьги из серебра с топазами и фианитами</h4>
+                    <p class="product-price"><h4>4 050 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Родированное серебро 925 пробы<br>2.48 г<br>Топаз (2 шт, 1.867 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -161,15 +161,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 23.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Кольцо из золота с фианитами</h4>
+                    <p class="product-price"><h4>8 990 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Красное золото 585 пробы<br>0.97 г<br>Фианит (5 шт, 1.004 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -178,15 +178,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 24.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Серьги из золота с бриллиантами</h4>
+                    <p class="product-price"><h4>14 990 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Красное золото 585 пробы<br>1.47 г<br>Бриллиант (природный) (18 шт, 0.054 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -195,15 +195,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 25.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Кольцо из золота с бриллиантами</h4>
+                    <p class="product-price"><h4>9 990 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Красное золото 585 пробы<br>0.91 г<br>Бриллиант (природный) (23 шт, 0.067 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -223,15 +223,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 26.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Кольцо из комбинированного золота с бриллиантами</h4>
+                    <p class="product-price"><h4>24 990 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Комбинированное золото 585 пробы<br>1.39 г<br>Бриллиант (природный) (1 шт, 0.046 карат) 
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -240,15 +240,15 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 27.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Серьги из золота с топазами и фианитами</h4>
+                    <p class="product-price"><h4>26 990 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Красное золото 585 пробы<br>2.64 г<br>Топаз (2 шт, 0.868 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -257,7 +257,7 @@
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
                 <img src="materials/tovars/image 28.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
+                    <h4 class="product-title">Кольцо из золота с бриллиантом</h4>
                     <p class="product-price"><h4>137 490 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
@@ -265,7 +265,7 @@
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Красное золото 585 пробы<br>0.76 г<br>Бриллиант (природный) (1 шт, 0.029 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
@@ -275,14 +275,14 @@
                 <img src="materials/tovars/image 29.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <p class="product-price"><h4>46 190 ₽</h4></p>
                     <div class="a2">
                         <p class="a22">Наведи для доп. информации</p>
                         <img src="materials/click.svg" alt="" class="a21">
                     </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Белое золото 585 пробы<br>1.66 г<br>Бриллиант (природный) (6 шт, 0.047 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
