--- a/cart.html
+++ b/cart.html
@@ -34,42 +34,54 @@
 
         <div class="cart">
             <div class="card" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 20.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Кольцо из комбинированного золота с бриллиантами</h4>
+                    <p class="product-price"><h4>34 990 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Бриллиант (природный)<br>134 шт, 0.081 карат
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
-                    <button class="button-cart" onclick="addToCart(event)">Удалить</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
                 </div>
             </div>
             <div class="card" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 22.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Серьги из серебра с топазами и фианитами</h4>
+                    <p class="product-price"><h4>4 050 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Родированное серебро 925 пробы<br>2.48 г<br>Топаз (2 шт, 1.867 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
-                    <button class="button-cart" onclick="addToCart(event)">Удалить</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
                 </div>
             </div>
             <div class="card" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 25.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
-                    <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <h4 class="product-title">Кольцо из золота с бриллиантами</h4>
+                    <p class="product-price"><h4>9 990 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Красное золото 585 пробы<br>0.91 г<br>Бриллиант (природный) (23 шт, 0.067 карат)
                     </h5></p>
                     <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
-                    <button class="button-cart" onclick="addToCart(event)">Удалить</button>
+                    <button class="button-cart" onclick="addToCart(event)">В корзину</button>
                 </div>
             </div>
         </div>
