--- a/favorite.html
+++ b/favorite.html
@@ -47,15 +47,19 @@
                 </div>
             </div>
             <div class="card a1" onmouseenter="showDetails(this)" onmouseleave="hideDetails(this)">
-                <img src="materials/tovar.svg" alt="Название товара" class="product-image">
+                <img src="materials/tovars/image 29.svg" alt="Название товара" class="product-image">
                 <div class="product-info">
                     <h4 class="product-title">Кольцо из белого золота с бриллиантами</h4>
-                    <p class="product-price"><h4>137 490 ₽</h4></p>
+                    <p class="product-price"><h4>46 190 ₽</h4></p>
+                    <div class="a2">
+                        <p class="a22">Наведи для доп. информации</p>
+                        <img src="materials/click.svg" alt="" class="a21">
+                    </div>
                 </div>
                 <div class="additional-info">
-                    <p><h5>Белое золото 585 пробы<br>Бриллиант (природный)<br>134 шт, 0.496 карат
+                    <p><h5>Белое золото 585 пробы<br>1.66 г<br>Бриллиант (природный) (6 шт, 0.047 карат)
                     </h5></p>
-                    <button class="button-favorite" onclick="addToFavorites(event)">Удалить из избранного</button>
+                    <button class="button-favorite" onclick="addToFavorites(event)">В избранное</button>
                     <button class="button-cart" onclick="addToCart(event)">В корзину</button>
                 </div>
             </div>
